--- a/EasyImageProcessing/EasyImageProcessing.vcxproj
+++ b/EasyImageProcessing/EasyImageProcessing.vcxproj
@@ -129,6 +129,9 @@
   <ItemGroup>
     <ClCompile Include="EasyImageProcessing.c" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="params.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
