--- a/EasyImageProcessing/EasyImageProcessing.vcxproj.filters
+++ b/EasyImageProcessing/EasyImageProcessing.vcxproj.filters
@@ -18,6 +18,9 @@
     <ClCompile Include="EasyImageProcessing.c">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="comm.c">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="params.h">
